<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_asap"
                android:contentDescription="@string/asap" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"
                android:text="@string/asap"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/ic_list_panel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/p_50_00"
                        android:textSize="19sp"
                        android:textColor="#313435"
                        android:fontFamily="@font/poppins_semibold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_complete"
                        android:textSize="8sp"
                        android:padding="2dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:background="@drawable/ic_order_complete"/>
                </LinearLayout>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="2.5"
                    android:progressTint="@color/gold_500"
                    style="@style/Widget.AppCompat.RatingBar.Small"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gold_500"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_marginTop="2dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_circle"/>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/gold_500"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="27 D Florencia St. 12th Avenue"
                            android:textColor="?attr/colorPrimaryVariant"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="27 D Florencia St. 12th Avenue, West Grace Park"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Caloocan City, Metro Manila 4453"
                            android:textSize="8sp" />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:background="@drawable/ic_person_pin_circle_24px"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="27 D Florencia St. 12th Avenue"
                            android:textColor="?attr/colorPrimaryVariant"

                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="1234 - G Mangustan Rd. Potrero"
                            android:textSize="8sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Caloocan City, Metro Manila 4453"
                            android:textSize="8sp" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Package Details"
                android:textSize="12sp"
                android:textColor="?attr/colorPrimaryVariant"
                android:fontFamily="@font/poppins_semibold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gold_500"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Service Type"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Parcel Type"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Parcel Weight"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Service Type"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Parcel Type"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Parcel Weight"/>
                </LinearLayout>
            </LinearLayout>






        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Payment Details"
                android:textSize="12sp"
                android:textColor="#313435"
                android:fontFamily="@font/poppins_semibold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#a1915f"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="@string/cash_on_delivery"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="Amount Payable"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="@string/your_income"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textSize="10sp"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:fontFamily="@font/poppins_semibold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="P 150"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/poppins"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:text="P 50"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="P 200"
                        android:textSize="10sp"
                        android:textColor="?attr/colorPrimaryVariant"
                        android:fontFamily="@font/poppins_semibold"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnPrimary"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_address_1"
                android:textSize="12sp"
                android:textColor="?attr/colorPrimaryVariant"
                android:fontFamily="@font/poppins_semibold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="8sp"
                android:fontFamily="@font/poppins"
                android:text="@string/comment"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_complete"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="?attr/colorOnPrimary"/>
    </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>